--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -6,26 +6,10 @@
 <link rel=icon href=data:,>
 <title>{{ .Title }}</title>
 <style type="text/css">
-@font-face {
-	font-family: 'Blanco';
-	src: url('https://cdn.janwillem.net/fonts/Blanco-Regular.eot');
-	src: url('https://cdn.janwillem.net/fonts/Blanco-Regular.eot?#iefix') format('embedded-opentype'), url('https://cdn.janwillem.net/fonts/Blanco-Regular.woff2') format('woff2'), url('https://cdn.janwillem.net/fonts/Blanco-Regular.woff') format('woff');
-	font-weight: 400;
-	font-style: normal;
-	font-stretch: normal;
-}
-@font-face {
-	font-family: 'Blanco';
-	src: url('https://cdn.janwillem.net/fonts/Blanco-Italic.eot');
-	src: url('https://cdn.janwillem.net/fonts/Blanco-Italic.eot?#iefix') format('embedded-opentype'), url('https://cdn.janwillem.net/fonts/Blanco-Italic.woff2') format('woff2'), url('https://cdn.janwillem.net/fonts/Blanco-Italic.woff') format('woff');
-	font-weight: 400;
-	font-style: italic;
-	font-stretch: normal;
-}
 body {
-  font-family: "Blanco", Georgia, serif;
-  font-size: 18px;
-  line-height: 1.45;
+  font-family: sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
   margin: auto; 
   max-width: 36rem;
   padding: 2rem 1rem;
