--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -6,8 +6,9 @@
 <link rel=icon href=data:,>
 <title>{{ .Title }}</title>
 <style type="text/css">
+@import url(https://fonts.bunny.net/css?family=ibm-plex-sans:400,400i,700);
 body {
-  font-family: sans-serif;
+  font-family: 'IBM Plex Sans', sans-serif;
   font-size: 16px;
   line-height: 1.5;
   margin: auto; 
@@ -28,9 +29,6 @@ header a {
   color: #006fff;
   border: none;
   text-decoration: none;
-}
-h1, h3, date, time, header, .logo {
-  font-family: -apple-system,BlinkMacSystemFont,avenir next,avenir,helvetica,helvetica neue,ubuntu,roboto,noto,segoe ui,arial,sans-serif;
 }
 h1 {
   margin: 0;
