--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -87,6 +87,10 @@ date {
   font-size: .7rem;
   color: #93918f;
 }
+books date {
+  display: block;
+  margin: 0 0 1rem;
+}
 postlink {
   display: block;
   margin: 0 0 1rem;
