--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -108,6 +108,11 @@ time {
 books div:nth-child(4n) {
   padding-bottom: 1rem;
 }
+visited > div {
+  display: block;
+  padding-bottom: 1rem;
+  line-height: 1.2;
+}
 movies {
   display: block;
   padding-bottom: 1rem;
