--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -8,13 +8,9 @@
 <style type="text/css">
 @import url(https://fonts.bunny.net/css?family=ibm-plex-sans:400,400i,700);
 body {
-  font-family: 'IBM Plex Sans', sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-  margin: auto; 
-  max-width: 36rem;
-  padding: 2rem 1rem;
-  color: #212529;
+  margin: 30px;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
+  max-width: 600px;
 }
 header {
   display: block;
