--- a/themes/blank/layouts/_default/list.html
+++ b/themes/blank/layouts/_default/list.html
@@ -1,12 +1,14 @@
 {{define "main"}} 
 
+<ul class="nodisc">
 {{ range (where .Site.Pages "Section" "posts") }}
    {{ range .Pages }}
-		<postlink>
+		<li>
 			<a href="{{ .Permalink }}">{{ .Title }}</a>
 			<date>{{ .Date.Format "02.01.2006" }}</date>
-		</postlink>
+		</li>
    {{ end }}
 {{ end }}
-
+</ul>
+	
 {{ end }}
