--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -11,6 +11,9 @@ body {
  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif;
  max-width:600px
 }
+header {
+  margin: 0 0 2rem;
+}
 .header a {
  color:rgba(0,0,0,.5);
  text-decoration:none
