--- a/themes/blank/layouts/_default/taxonomy.html
+++ b/themes/blank/layouts/_default/taxonomy.html
@@ -1,6 +1,6 @@
 {{define "main"}}
 
-<h3>Posts with the {{ .Title }} tag</h3>
+<p>Posts with the #{{ .Title }} tag</p>
 
 <ul class="nodisc">
 {{ range .Pages }}
