--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -18,9 +18,16 @@ header {
  color:rgba(0,0,0,.5);
  text-decoration:none
 }
+nav a {
+  margin-right: .5rem;
+}
+.logo {
+  color: inherit;
+  text-decoration: none;
+}
 h1 {
  font-size:30px;
- margin:.7rem 0 1rem
+ margin:.7rem 0 .7rem
 }
 a {
  color:rgba(0,0,255,.45)
