--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -48,27 +48,27 @@ p {
  margin:0 0 1rem
 }
 img {
- max-width:95%
+ max-width: 95%;
 }
 date {
- font-size:small
+ font-size: small;
 }
 code {
- background:#ddd;
- padding:2px;
- line-height:1.3em;
- font-size:1.3em
+ background: #FCF6FF;
+ padding: .5rem 1rem;
+ line-height: 1.3em;
+ display: block;
 }
 blockquote {
- margin:0 0 1.3rem;
- padding:0;
- font-style:italic
+ margin: 0 0 1.3rem;
+ padding: 0;
+ font-style: italic;
 }
 hr {
- border:0;
- border-top:1px solid #eee;
- width:10rem;
- margin:0
+ border: 0;
+ border-top: 1px solid #eee;
+ width: 10rem;
+ margin: 0;
 }
 footer {
  font-size:small;
