--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -55,7 +55,7 @@ date {
 }
 code {
  background: #FCF6FF;
- padding: .5rem 1rem;
+ padding: 1rem 1rem;
  line-height: 1.3em;
  display: block;
  border-radius: 5px;
