--- a/themes/blank/layouts/partials/header.html
+++ b/themes/blank/layouts/partials/header.html
@@ -3,7 +3,7 @@
   {{ if .IsHome }}
   
   <nav>
-    <a href="/" class="logo">hello.</a>
+    <a href="/" class="logo">👋 Hi!</a>
     <a href="/about">about</a>
     <a href="/uses">uses</a>
   </nav>
