--- a/themes/blank/layouts/_default/list.html
+++ b/themes/blank/layouts/_default/list.html
@@ -5,7 +5,7 @@
    {{ range .Pages }}
 		<li>
 			<a href="{{ .Permalink }}">{{ .Title }}</a>
-			<date>{{ .Date.Format "02.01.2006" }}</date>
+			<date>{{ .Date.Format "02.01.2006" }}</date><br>{{ .Description }}
 		</li>
    {{ end }}
 {{ end }}
